deploy/kubernetes/postgres-pilot/gongmcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gongmcp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gongmcp
  ports:
    - name: http
      port: 8080
      targetPort: http
